# linq-cpp

./: CMakeLists.txt  README.md  assert.hpp  benchmark.cpp  main.cpp
src/: AdapterState.hpp  GroupByState.hpp  IEnumerable.hpp  IEnumerableCore.hpp  IState.hpp  RangeState.hpp  SelectState.hpp  SkipState.hpp  SkipWhileState.hpp  TakeState.hpp  TakeWhileState.hpp  WhereState.hpp
src/Accumulator/: Sum.hpp
src/ElementAccessor/: First.hpp  Last.hpp  MinMax.hpp  Single.hpp
src/Logic/: All.hpp  Any.hpp  Contains.hpp
src/SetBuilder/: Concat.hpp  Distinct.hpp  Except.hpp  Intersect.hpp
tests/: tests.cpp
